--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -20,6 +20,7 @@ $fa-font-path: "../bower_components/font-awesome/fonts";
 @import 'admin/admin.scss';
 @import 'graphics/graphics.scss';
 @import 'main/main.scss';
+@import 'ulam/ulam.scss';
 @import '../components/footer/footer.scss';
 @import '../components/modal/modal.scss';
 @import '../components/oauth-buttons/oauth-buttons.scss';
